--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -1,15 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Conversor de Bases</string>
 
-    <string name="SistemaBinario"> Sistemas Binario </string>
-    <string name="SistemaDecimal"> Sistema Decimal </string>
+    <string name="SistemaBinario">Sistemas Binários </string>
+    <string name="SistemaDecimal"> Sistemas Decimais </string>
     <string name="SistemaOctal"> Sistema Octal </string>
     <string name="SistemaHexadecimal">  Sistema Hexadecimal </string>
 
-    <string name="SistemaBinario_otros">Binario al resto de los Sistemas </string>
-    <string name="SistemaDecimal_otros">Decimal al resto de los Sistemas </string>
-    <string name="SistemaOctal_otros">Octal al resto de los Sistemas </string>
-    <string name="SistemaHexadecimal_otros">Hexadecimal al resto de los Sistemas </string>
+    <string name="SistemaBinario_otros">Binário para o resto dos sistemas </string>
+    <string name="SistemaDecimal_otros">Decimal para o resto dos sistemas </string>
+    <string name="SistemaOctal_otros">Octal para o resto dos sistemas </string>
+    <string name="SistemaHexadecimal_otros">Hexadecimal para o resto dos sistemas </string>
 
     <string name="txtBaseInicial"> Base_Inicial: </string>
     <string name="btnCalcular"> CALCULAR </string>
@@ -21,8 +22,5 @@
     <string name="Numero2">00</string>
     <string name="Numero3">00</string>
 
-    <string name="btnAtras"> ATRAS </string>
-
-
+    <string name="btnAtras"> VOLTAR </string>
 </resources>
-
